--- a/css/style.css
+++ b/css/style.css
@@ -28,10 +28,10 @@
     --grey-light: #f5f5f5;
     --grey-elight: #fafafa;
     --white: #ffffff;
-    --gap-reviews: 20px;
+    --gap-directions: 20px;
     --shadow: rgba(115, 115, 115, 0.25);
-    --gap-maps: 23px;
-    --gap-icon: 10px;
+    --gap-maps: 20px;
+    --gap-icon: 11px;
 }
 
 p, ul, li, h1, h2, h3, h4, h5, h6 {
@@ -101,6 +101,8 @@ h2 {
 }
 
 /* header */
+
+
 
 
 /* гамбургер меню для мобильной версии */
