--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@
     --white: #ffffff;
     --gap-directions: 20px;
     --shadow: rgba(115, 115, 115, 0.25);
+    --shadow-title: rgba(0, 0, 0, 0.25);
     --gap-maps: 20px;
     --gap-icon: 10px;
     --gap-10: 10px;
@@ -93,9 +94,9 @@ h1 {
 
 h2 {
     font-style: normal;
-    font-weight: 600;
-    font-size: 83px;
-    line-height: 82px;
+    font-weight: 700;
+    font-size: 60px;
+    line-height: 60px;
     color: rgba(255, 255, 255, 0.14);
     text-transform: uppercase;
 }
@@ -106,6 +107,10 @@ h2 {
     font-size: 34px;
     line-height: 34px;
     color: var(--white);
+}
+
+.section-background {
+    background-color: var(--dark);
 }
 
 /* header */
@@ -122,7 +127,7 @@ h2 {
     box-shadow: 0px 4px 4px var(--shadow-menu);
 
     /* Входит в состав блока с картинкой, поэтому не может выйти за прределы блока? */
-    
+
     /* position: sticky;
     top: 0;
     z-index: 10; */
@@ -251,6 +256,26 @@ h2 {
     line-height: 12px;
     color: var(--main-color);
     cursor: pointer;
+}
+
+/* Направления */
+
+.title {
+    padding: 100px 0px 120px 0px;
+    text-shadow: 0px 4px 4px var(--shadow-title);
+
+    position: relative;
+}
+
+.double-title {
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 28px;
+    color: var(--white);
+
+    position: absolute;
+    top: 140px;
+    left: 20px;
 }
 
 /* footer */
