--- a/css/style.css
+++ b/css/style.css
@@ -874,4 +874,138 @@ h2 {
     padding-bottom: 30px;
 }
 
+.subscriptions-list {
+    padding-bottom: 120px;
+    display: flex;
+    gap: var(--gap-cards);
+}
+
+.rate-min {
+    background-image: url(/images/Rectangle\ 45.png);
+    background-size: cover;
+    background-position: top;
+}
+
+.rate-standart {
+    background-image: url(/images/Rectangle\ 51.png);
+    background-size: cover;
+    background-position: top;
+}
+
+.rate-max {
+    background-image: url(/images/Rectangle\ 53.png);
+    background-size: cover;
+    background-position: top;
+}
+
+.subscriptions-item {
+    width: calc((100% - var(--gap-cards)*2)/3);
+
+    display: flex;
+    flex-direction: column;
+}
+
+/* попробовать сделать через позиционирование */
+.subscriptions-pouring {
+    margin: 10px;
+    border: 1px solid var(--main-color);
+    background-color: rgba(0, 0, 0, 0.52);
+}
+
+.rate {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.title-subscriptions {
+    font-weight: 700;
+    font-size: 26px;
+    text-align: center;
+    color: var(--white);
+    padding: 20px 0px;
+}
+
+.description-subscriptions {
+    font-weight: 300;
+    font-size: 15px;
+    color: var(--white);
+    padding: 0px 14px 40px 14px;
+}
+
+.price-buy {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+    padding: 0px 14px 14px 14px;
+}
+
+.price-subscriptions {
+    display: flex;
+    gap: 6px;
+}
+
+.price {
+    font-weight: 400;
+    font-size: 24px;
+    color: var(--white);
+}
+
+.price-accent {
+    font-weight: 700;
+    font-size: 25px;
+    color: var(--dark-main);
+}
+
 /* footer */
+
+.messengers {
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    gap: var(--gap-10);
+}
+
+.title-messengers {
+    font-weight: 300;
+    font-size: 26px;
+    color: var(--grey-middle);
+}
+
+.messengers-footer-list {
+    display: flex;
+    gap: 6px;
+}
+
+.messengers-footer {
+    font-size: 25px;
+    color: var(--dark-elight);
+}
+
+.messengers-footer:hover {
+    color: var(--grey-semi);
+    transition: color 100ms linear;
+}
+
+.info-footer {
+    display: flex;
+}
+
+.menu-footer {
+    width: 50%;
+}
+
+
+
+
+
+
+
+.contacts-footer-list {
+    display: flex;
+}
+
+.contacts-footer-item {
+    width: 50%;
+}
