--- a/css/style.css
+++ b/css/style.css
@@ -903,6 +903,7 @@ h2 {
 
     display: flex;
     flex-direction: column;
+    /* position: relative; */
 }
 
 /* попробовать сделать через позиционирование */
@@ -910,6 +911,8 @@ h2 {
     margin: 10px;
     border: 1px solid var(--main-color);
     background-color: rgba(0, 0, 0, 0.52);
+
+    /* position: absolute; */
 }
 
 .rate {
@@ -960,11 +963,18 @@ h2 {
 
 /* footer */
 
+.footer-section {
+    background-image: url(/images/background\ \(2\).png);
+    background-size: cover;
+    background-position: top;
+}
+
 .messengers {
     display: flex;
     flex-direction: row;
     justify-content: end;
     gap: var(--gap-10);
+    padding: 60px;
 }
 
 .title-messengers {
@@ -990,22 +1000,55 @@ h2 {
 
 .info-footer {
     display: flex;
+    padding-bottom: 80px;
 }
 
 .menu-footer {
     width: 50%;
 }
 
+.menu-list {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    padding-top: 10px;
+}
 
+.menu-item {
+    font-size: 17px;
+}
 
+.all-contacts {
+    width: 50%;
+}
 
-
-
+.title-contacts {
+    font-size: 20px;
+    font-weight: 300;
+    color: var(--grey-middle);
+    padding-top: 15px;
+    padding-bottom: 28px;
+    display: flex;
+    align-items: center;
+}
 
 .contacts-footer-list {
     display: flex;
+    gap: 8px;
 }
 
 .contacts-footer-item {
-    width: 50%;
+    width: calc((100% - var(--gap-10)*1)/2);
+}
+
+.address-list, .telephone-list {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.address-item, .telephone-list {
+    font-size: 17px;
+    font-weight: 300;
+    color: var(--white);
 }
