--- a/css/schedule.css
+++ b/css/schedule.css
@@ -696,6 +696,7 @@ h2 {
     flex-direction: row;
     flex-wrap: wrap;
     gap: var(--gap-cards);
+    padding-bottom: 120px;
 }
 
 .cards-schedule-item {
@@ -703,46 +704,51 @@ h2 {
 }
 
 .cards-dance-mix {
-    background-image: url(/images/Rectangle\ 6.png);
+    background-image: url(/images/Rectangle\ 6-schedule.png);
     background-size: cover;
     background-position: center;
 }
 
 .cards-children {
-    background-image: url(/images/Rectangle\ 7.png);
+    background-image: url(/images/Rectangle\ 7-schedule.png);
     background-size: cover;
     background-position: top;
 }
 
 .cards-caribbean-mix {
-    background-image: url(/images/Rectangle\ 8.png);
+    background-image: url(/images/Rectangle\ 8-schedule.png);
     background-size: cover;
     background-position: top;
 }
 
 .cards-pole-dance {
-    background-image: url(/images/Rectangle\ 9.png);
+    background-image: url(/images/Rectangle\ 9-schedule.png);
     background-size: cover;
     background-position: top;
 }
 
 .cards-sky-jumping {
-    background-image: url(/images/Rectangle\ 10.png);
+    background-image: url(/images/Rectangle\ 10-schedule.png);
     background-size: cover;
     background-position: top;
 }
 
 .cards-hip-hop {
-    background-image: url(/images/Rectangle\ 11.png);
+    background-image: url(/images/Rectangle\ 11-schedule.png);
     background-size: cover;
     background-position: top;
 }
 
 /* .schedule-position {
     position: relative;
+}*/
+
+.img-ten {
+    
 }
 
-.cards-item-img::after {
+
+/*.cards-item-img::after {
     content: '';
     width: 100%;
     height: 100%;
@@ -773,14 +779,13 @@ h2 {
 }
 
 .schedule-date-border {
-    /* padding: 14px; */
     border: 1px solid var(--dark-main);
 }
 
 .date-list {
     display: flex;
     flex-direction: column;
-    gap: var(--gap-10);
+    gap: 20px;
     align-items: center;
     padding: 20px 0px;
 
@@ -791,10 +796,6 @@ h2 {
     font-size: 22px;
     font-weight: 700;
 }
-
-
-
-
 
 .button-list {
     display: flex;
@@ -828,6 +829,38 @@ h2 {
     width: fit-content; 
 } 
 
+
+/* БЛОК Посмотреть все */
+
+.section-more {
+    padding-bottom: 100px;
+}
+
+.more-linear {
+    border-bottom: 5px solid var(--dark-middle);
+}
+
+.more-list {
+    display: flex;
+    gap: var(--gap-10);
+    justify-content: end;
+    padding: 14px 14px 14px 0px;
+    align-items: center;
+}
+
+.more-text {
+    font-weight: 700;
+    font-size: 24px;
+    text-transform: uppercase;
+    color: var(--dark-middle);
+}
+
+.icon-more {
+    font-size: 20px;
+    color: var(--dark-middle); 
+}
+
+
 /* footer */
 
 .footer-section {
@@ -841,7 +874,7 @@ h2 {
     flex-direction: row;
     justify-content: end;
     gap: var(--gap-10);
-    padding: 60px;
+    padding: 60px 0px;
 }
 
 .title-messengers {
