--- a/css/style.css
+++ b/css/style.css
@@ -974,7 +974,7 @@ h2 {
     flex-direction: row;
     justify-content: end;
     gap: var(--gap-10);
-    padding: 60px;
+    padding: 60px 0px;
 }
 
 .title-messengers {
