--- a/css/teachers.css
+++ b/css/teachers.css
@@ -706,7 +706,7 @@ h2 {
     flex-direction: row;
     justify-content: end;
     gap: var(--gap-10);
-    padding: 60px;
+    padding: 60px 0px;
 }
 
 .title-messengers {
