--- a/css/teachers.css
+++ b/css/teachers.css
@@ -689,8 +689,62 @@ h2 {
     cursor: pointer;
 }
 
+/* Main */
 
+.section-description {
+    padding-bottom: 100px;
+}
 
+@media (max-width: 600px) {
+    .section-description {
+        padding-bottom: 40px;
+    }
+}
+
+@media (min-width: 600px) and (max-width: 768px) {
+    .section-description {
+        padding-bottom: 60px;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .section-description {
+        padding-bottom: 80px;
+    }
+}
+
+@media (min-width: 1024px) and (max-width: 1280px) {
+    .section-description {
+        padding-bottom: 100px;
+    }
+}
+
+.text-description {
+    font-size: 24px;
+    color: var(--grey-semi);
+}
+
+@media (max-width: 600px) {
+    .text-description {
+        font-size: 18px;
+    }
+}
+
+@media (min-width: 600px) and (max-width: 768px) {
+    .text-description {
+        font-size: 20px;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .text-description {
+        font-size: 22px;
+    }
+}
+
+.accent {
+    color: var(--dark-main);
+}
 
 
 /* footer */
